name: Vulkan
version: 0.1.0.0
synopsis: A binding for the Vulkan API
description:
  Vulkan is the new generation, open standard API for high-efficiency access to
  graphics and compute on modern GPUs. This ground-up design, previously referred
  to as the Next Generation OpenGL Initiative, provides applications direct
  control over GPU acceleration for maximized performance and predictability.
  For more information about Vulkan, see <https://www.khronos.org/vulkan>.
copyright: Copyright (C) 2016 Sven Panne
license: BSD3
license-file: LICENSE
author: Sven Panne
maintainer: Sven Panne <svenpanne@gmail.com>
category: Graphics
build-type: Simple
tested-with:
  GHC == 7.8.4
  GHC == 7.10.3
  GHC == 8.0.1
  GHC == 8.1
cabal-version: >= 1.10
extra-source-files:
  CHANGELOG.md
  README.md
  RegistryProcessor/LICENSE
  RegistryProcessor/RegistryProcessor.cabal
  RegistryProcessor/Setup.hs
  RegistryProcessor/Vulkan-Registry/registry.rnc
  RegistryProcessor/Vulkan-Registry/vk.xml
  RegistryProcessor/src/DeclarationParser.hs
  RegistryProcessor/src/Main.hs
  RegistryProcessor/src/ManPages.hs
  RegistryProcessor/src/MangledRegistry.hs
  RegistryProcessor/src/Registry.hs

library
  exposed-modules:
    Graphics.Vulkan
  build-depends:
    base >= 3 && < 5
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  if impl(ghc > 8)
    ghc-options: -Wcompat

source-repository head
  type: git
  location: https://github.com/svenpanne/Vulkan.git
